--- a/sass/components/_buttons.scss
+++ b/sass/components/_buttons.scss
@@ -86,7 +86,7 @@
   padding: 0;
   margin-left: 0;
 
-  z-index: 999;
+  z-index: 997;
 
   height: 40px;
   width: 40px;
