--- a/sass/components/_mobile-wrap.scss
+++ b/sass/components/_mobile-wrap.scss
@@ -5,12 +5,12 @@
 
   &.is-open {
     position: fixed;
-
+    z-index: 997;
     top: 0;
     left: 0;
     width: 100%;
     height: 100%;
-    z-index: 998;
+
     padding: 48px 40px;
     background-color: #fff;
     flex-direction: column;
