--- a/sass/components/_modal.scss
+++ b/sass/components/_modal.scss
@@ -18,6 +18,7 @@
 }
 
 .modal {
+  z-index: 999;
   position: relative;
   display: block;
 
